syntax = "proto3";

package plugins;

import "ptypes/empty/empty.proto";

enum PluginType {
    CONNECTION = 0;
}

message PluginInfo {
    string endpoint = 1;
    repeated PluginType implementedTypes = 2;
}

service PluginRegistry {
    rpc Register (PluginInfo) returns (google.protobuf.Empty);
}
